2004-03-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filefilter.[hg|ccg]: Wrapped filefilter as a GtkObject 
	instead of a GObject, because it is a GtkObject.
	* examples/book/dialogs/filechooserdialog/: Used filefilter.

2004-03-25  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/src/messagedialog.[hg|ccg]: removed use_separator parameter from
	constructor as GtkMessageDialog gets its separator setting from the style
	now.

2004-03-24  Bryan Forbes  <bryan@reigndropsfall.net>

	* gtk/src/uimanager.hg: fixed typo in disconnect_proxy signal.

2004-03-21 Elijah Newren  <newren@math.utah.edu>

	* doc/FAQ/gtkmm-faq.xml: Updated to mention gtkmm2 more than gtkmm 1.2.

2004-03-20  Murray Cumming  <murrayc@murrayc.com>

	* demos/gtk-demo/demowindow.cc: Use sigc::ptr_fun() instead of giving
	the set_select_function function pointer directly to connect.

2004-03-20  Murray Cumming  <murrayc@murrayc.com>

	* ActionGroup::get_action(), Clipboard::get_owner(), 
	ComboBox::get_model(), Entry::get_layout(), get_completion(),
	EntryCompletion::get_model(), FileChooser::get_filter(), 
	IconInfo::get_builtin_pixbuf(), IconSource::get_pixbuf(), 
	Image::get_pixbuf(), get_animation(), Menu::get_accel_group(), 
	Scale::get_layout(), TreeModelFilter::get_model(),
	UIManager::get_accel_group(), get_action(), 
	Widget::drag_begin(): Use refreturn.
	* Entry::get_layout(), IconInfo::get_builtin_pixbuf(): 
	IconSource::get_pixbuf(), Image::get_pixbuf(), 
	Menu::get_accel_group(): Added const versions.
        (Thanks to Bryan Forbes for finding the missing refreturns.)

2004-03-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/icontheme.hg: Wrapped changed signal.

2004-03-14  Murray Cumming  <murrayc@murrayc.com>
      
	* gtk/src/bin.ccg remove(),
	  gtk/src/container.[hg|ccg]: If the child widget is managed, do 
	a reference on the child widget before removing it, so that it 
	is not destroyed, and is ready for a new container, just like 
	when it was first instantiated.
