@@ -324,6 +324,7 @@ AC_CONFIG_FILES([
       examples/book/menus/Makefile
         examples/book/menus/main_menu/Makefile
         examples/book/menus/popup/Makefile
+      examples/book/menus_and_toolbars/Makefile
       examples/book/notebook/Makefile
       examples/book/paned/Makefile
       examples/book/progressbar/Makefile
