@@ -1,0 +1,5 @@
+Makefile
+Makefile.in
+.libs
+.deps
+main_menu
