@@ -28,7 +28,7 @@ namespace Gtk
 
 RadioAction::RadioAction(Group& group, const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label, const Glib::ustring& tooltip)
 :
-  _CONSTRUCT("name", name.c_str(), "stock_id", stock_id.get_c_str(), "label", label.c_str(), "tooltip", tooltip.c_str())
+  _CONSTRUCT("name", name.c_str(), "stock_id", stock_id.get_c_str(), "label", (label.empty() ? 0 : label.c_str()), "tooltip", (tooltip.empty() ? 0 : tooltip.c_str()))
 {
   set_group(group);
 }
