@@ -26,7 +26,7 @@ namespace Gtk
 
 ToggleAction::ToggleAction(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label, const Glib::ustring& tooltip, bool is_active)
 :
-  _CONSTRUCT("name", name.c_str(), "stock_id", stock_id.get_c_str(), "label", label.c_str(), "tooltip", tooltip.c_str())
+  _CONSTRUCT("name", name.c_str(), "stock_id", stock_id.get_c_str(), "label", (label.empty() ? 0 : label.c_str()), "tooltip", (tooltip.empty() ? 0 : tooltip.c_str()))
 {
   set_active(is_active);
 }
