@@ -1,3 +1,9 @@
+2004-03-27  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/action.ccg, toggleaction.ccg, radioaction.ccg: 
+	Constructor: Give GTK+ 0 instead of "" for default labels and tooltips,
+	so that the stock ones are used.
+
 2004-03-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/filefilter.[hg|ccg]: Wrapped filefilter as a GtkObject 
